# howso-visuals-py

./: .flake8  .gitignore  LICENSE-3RD-PARTY.txt  README.md  pyproject.toml  requirements-3.10-dev.txt  requirements-3.10.txt  requirements-3.11-dev.txt  requirements-3.11.txt  requirements-3.12-dev.txt  requirements-3.12.txt  requirements-3.13-dev.txt  requirements-3.13.txt  requirements-3.14-dev.txt  requirements-3.14.txt  requirements-3.8-dev.txt  requirements-3.8.txt  requirements-3.9-dev.txt  requirements-3.9.txt  ruff.toml
.github/workflows/: build-pr.yml  build-test-package.yml  build.yml  pytest.yml  release.yml
howso/visuals/: __init__.py  colors.py  graph.py  utilities.py  visuals.py
howso/visuals/tests/: conftest.py  test_graph.py  test_plot.py  test_utilities.py
