[build-system]
requires = ["setuptools>=68.0.0", "wheel~=0.40.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name="howso-visuals"
dynamic = ["version"]
readme = "README.md"
description = "Visualization utilities for use with Howso Engine."
requires-python = ">=3.10"
keywords = ["machine", "learning", "artificial", "intelligence", "data", "visualization"]
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "howso-engine>=44.0",
    "networkx",
    "plotly[kaleido]~=6.0",
    "scipy",
    "seaborn",
    "umap-learn~=0.5",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "isort",
    "pytest-cov",
    "pytest-rerunfailures",
    "pytest-xdist",
    "pytest",
    "ruff",
    "yapf",
]

[project.urls]
homepage = "https://howso.com"
documentation = "https://docs.howso.com/"
repository = "https://github.com/howsoai/howso-visuals-py"

[tool.setuptools.packages.find]
exclude = ["howso.visuals.tests"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.coverage.run]
source = ["howso.visuals"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.html]
directory = ".htmlcov"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    "@abstractmethod",
    "@abc.abstractmethod",
]

# version is managed by setuptools_scm
[tool.setuptools_scm]
